@@ -1,5 +1,9 @@
 Change Log:
 
+7/25/09 - 4:46 pm - Derrick (v 1.0.5.1)
+Added some new location classes. Made a "world" in the testworld.txt. formats could be wrong (?).
+Initializes to testworld.txt. Right now it does not initialize... advworld.util.utility.setupworld needs to be looked at.
+
 7/25/09 - 1:08 pm - Derrick (v 1.0.5)
 @Sam are we using North, s, e, w, up, down? how do you want to parse room descriptions?
    You can change the LOCK parser to include two fields so can lock rooms from both sides. 
